--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,6 +20,9 @@
     {% if page.sidebar.nav %}
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
+    {% if page.sidebar.tagcloud %}
+      {% include tag-cloud.html %}
+    {% endif %}
   {% endif %}
   </div>
 {% endif %}
